session.setAttribute()を使うことで、「戻る」を押したらちゃんと遷移前のページに移ることができた。また、jsファイルの名称変更。ケバブケースに改めた