@@ -2,9 +2,6 @@ package com.example.webapp.controller;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.servlet.http.HttpServletRequest;
 
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
@@ -18,11 +15,13 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import com.example.webapp.entity.EntityForFullCalendar;
 import com.example.webapp.form.ShiftRequestForm;
+import com.example.webapp.form.ShiftScheduleEditForm;
 import com.example.webapp.service.ShiftManagementService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
 
 @Controller
@@ -32,44 +31,32 @@ public class ShiftManagementController {
 
 	private final ShiftManagementService service;
 
-	//	@GetMapping
-	//	public String showShiftTables(Model model,
-	//			@ModelAttribute(value="from_time_recorder",binding=false) Boolean fromTimeRecorder) {
-	//		model.addAttribute("from_time_recorder", Boolean.TRUE.equals(fromTimeRecorder));
-	//		return "shift/schedule";
-	//	}
-	//	
-	//	@GetMapping("/from_time_recorder")
-	//	public String toShift(RedirectAttributes attrs) {
-	//		attrs.addFlashAttribute("from_time_recorder", true);
-	//		return "redirect:/shift";
-	//	}
 	@GetMapping
-	public String showShiftTables(Model model, HttpServletRequest request) {
-		String referer = request.getHeader("Referer");
-		model.addAttribute("referer",referer);
+	public String showShiftSchedule(HttpSession session,Model model) {
+		String from=(String)session.getAttribute("from");
+		model.addAttribute("from",from);
 		return "shift/schedule";
 	}
 
-	@GetMapping("form")
-	public String showForm(ShiftRequestForm form, Authentication authentication, Model model) {
+	@GetMapping("request/form")
+	public String showRequestForm(ShiftRequestForm form, Authentication authentication, Model model) {
 		Integer employeeId = Integer.parseInt(authentication.getName());
 		//id,start(date)のみの情報が返ってくる
 		List<EntityForFullCalendar> requests = service.selectRequestsByEmployeeId(employeeId);
 		form.setRequests(requests);
 		form.setIsNew(CollectionUtils.isEmpty(requests));
-		return "shift/request_form";
+		return "shift/request";
 	}
 
-	@GetMapping("renew")
+	@GetMapping("request/renew")
 	public String deleteRequests(Authentication authentication) {
 		Integer employeeId = Integer.parseInt(authentication.getName());
 		service.deleteRequestsByEmployeeId(employeeId);
-		return "forward:/shift/form";
+		return "forward:/shift/request/form";
 	}
 
-	@PostMapping("submit")
-	public String submitShifts(@RequestParam("employee_id") Integer employeeId,
+	@PostMapping("request/submit")
+	public String submitRequests(@RequestParam("employee_id") Integer employeeId,
 			@RequestParam String selectedDatesJson,
 			RedirectAttributes attributes) throws JsonProcessingException {
 
@@ -81,11 +68,50 @@ public class ShiftManagementController {
 
 		List<LocalDate> dates = dateStrs.stream()
 				.map(LocalDate::parse)
-				.collect(Collectors.toList());
+				.toList();
 
 		service.insertShiftRequests(employeeId, dates);
 		attributes.addFlashAttribute("message", "シフト希望の提出が完了しました");
 		//「送信しました」みたいなメッセージを表示して、「登録済み」に切り替え
-		return "redirect:/shift/form";
+		return "redirect:/shift/request/form";
+	}
+	
+	@GetMapping("management/edit")
+	public String showeditPage(ShiftScheduleEditForm form,Model model) {
+		//id,start(date)のみの情報が返ってくる
+		Integer nextMonth=LocalDate.now().getMonthValue()+1;
+		List<EntityForFullCalendar> shiftsOfNextMonth=service.selectShiftScheduleByTargetMonth(nextMonth);
+//		List<EntityForFullCalendar> requests = service.selectAllRequests();
+//		form.setRequests(requests);
+		form.setShiftsOfNextMonth(shiftsOftNextMonth);
+		form.setIsNew(CollectionUtils.isEmpty(shiftsOfNextMonth));
+		return "shift/edit";
+	}
+
+	@GetMapping("managemnet/renew")
+	public String deleteShift() {
+		Integer nextMonth=LocalDate.now().getMonthValue()+1;
+		service.deleteShiftScheduleByTargetMonth(nextMonth);
+		return "forward:/shift/management/edit";
+	}
+
+	@PostMapping("management/execute")
+	public String submitShifts(@RequestParam String selectedDatesJson,
+			RedirectAttributes attributes) throws JsonProcessingException {
+
+		// JSON文字列を List<String> に変換
+		ObjectMapper mapper = new ObjectMapper();
+		List<String> dateStrs = mapper.readValue(selectedDatesJson,
+				new TypeReference<List<String>>() {
+				});
+
+		List<LocalDate> dates = dateStrs.stream()
+				.map(LocalDate::parse)
+				.toList();
+
+		service.insertShiftsOfNextMonth(dates);
+		attributes.addFlashAttribute("message", "シフトの作成が完了しました");
+		//「送信しました」みたいなメッセージを表示して、「登録済み」に切り替え
+		return "redirect:/shift/management/edit";
 	}
 }
